--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -1,3 +1,3 @@
 <div class="home">
-  <a routerLink="/dashboard/overview">Visit Dashboard</a>
+  <a routerLink="/dashboard">Visit Dashboard</a>
 </div>
