--- a/src/app/shared/components/dashboard/dashboard.scss
+++ b/src/app/shared/components/dashboard/dashboard.scss
@@ -8,7 +8,7 @@
 
   .dashboard-content {
     flex: 1;
-    background-color: var(--accent);
-    color: var(--accent-foreground);
+    background-color: var(--background);
+    color: var(--foreground);
   }
 }
