--- a/src/app/shared/components/login/login.scss
+++ b/src/app/shared/components/login/login.scss
@@ -1,12 +1,3 @@
-:root {
-  --primary-alpha: rgba(
-    45,
-    103,
-    227,
-    0.3
-  ); // You can adjust this if your --primary color changes
-}
-
 .login {
   display: flex;
   flex-direction: column;
@@ -83,6 +74,11 @@
       transition: background-color 0.3s ease;
       margin-top: 1rem;
       height: 2.5rem;
+      font-family: inherit;
+
+      &:hover {
+        background-color: var(--primary-hover);
+      }
     }
   }
 
