--- a/src/app/shared/components/signup/signup.scss
+++ b/src/app/shared/components/signup/signup.scss
@@ -1,12 +1,3 @@
-:root {
-  --primary-alpha: rgba(
-    45,
-    103,
-    227,
-    0.3
-  ); // Use the same color as --primary but with alpha
-}
-
 .signup {
   display: flex;
   flex-direction: column;
@@ -119,22 +110,27 @@
       transition: background-color 0.3s ease;
       margin-top: 1rem;
       height: 2.5rem;
-    }
-  }
-
-  .form-text {
-    margin-top: 1rem;
-    font-size: 0.875rem;
-    color: inherit;
-
-    .form-link {
-      color: var(--primary);
-      text-decoration: none;
-      font-weight: 500;
-      cursor: pointer;
+      font-family: inherit;
 
       &:hover {
-        text-decoration: underline;
+        background-color: var(--primary-hover);
+      }
+    }
+
+    .form-text {
+      margin-top: 1rem;
+      font-size: 0.875rem;
+      color: inherit;
+
+      .form-link {
+        color: var(--primary);
+        text-decoration: none;
+        font-weight: 500;
+        cursor: pointer;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
