feat(signup): add company location and phone number fields to signup form

--- a/src/app/shared/components/signup/signup.html
+++ b/src/app/shared/components/signup/signup.html
@@ -35,6 +35,19 @@
       />
     </div>
     <div class="form-group">
+      <label for="location">Company location</label>
+      <input
+        type="text"
+        placeholder="City, Country"
+        id="location"
+        name="location"
+      />
+    </div>
+    <div class="form-group">
+      <label for="phone">Phone number</label>
+      <input type="tel" placeholder="+49 123 4567890" id="phone" name="phone" />
+    </div>
+    <div class="form-group">
       <label for="password">Password</label>
       <input
         type="password"
